# SoapyPlutoSDR

./: CMakeLists.txt  Changelog.txt  FindLibAD9361.cmake  FindLibIIO.cmake  FindLibUSB.cmake  Findlibad9361.cmake  Findlibiio.cmake  PlutoSDR_Registation.cpp  PlutoSDR_Registration.cpp  PlutoSDR_Settings.cpp  PlutoSDR_Streaming.cpp  README.md  SoapyPlutoSDR.hpp
.github/workflows/: build.yml
debian/: changelog  control  copyright
